Update TournamentsView.java